[package]
name = "sim-rs"
version = "0.1.0"
edition = "2021"
authors = ["Karl Hill <karlhillx@gmail.com>"]
description = "A lightweight, high-speed satellite orbit and telemetry simulator in Rust."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
